# laxate

./: .buildinfo  .copier-answers.yaml  .gitignore  LICENSE  Makefile  README.html  README.md  genindex.html  index.json  info.json  objects.inv  py-modindex.html  pyproject.toml  regressions.xml  search.html  searchindex.js
.doctrees/: README.doctree  environment.pickle  index.doctree
.doctrees/.github/: CODE_OF_CONDUCT.doctree  pull_request_template.doctree
.doctrees/.github/ISSUE_TEMPLATE/: bug_report.doctree  feature_request.doctree  question.doctree
.doctrees/autoapi/laxate/: index.doctree
.doctrees/autoapi/test_all/: index.doctree
.doctrees/autoapi/test_config/: index.doctree
.doctrees/autoapi/test_docker/: index.doctree
.doctrees/autoapi/test_hetzner/: index.doctree
.doctrees/autoapi/test_local/: index.doctree
.doctrees/autoapi/test_remote/: index.doctree
.doctrees/docs/src/: API.doctree  usage.doctree
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: benchmarks.yaml  build.yaml  docs.yaml
_modules/: index.html
_modules/laxate/: cli.html  config.html  docker.html  local.html  remote.html  runner.html
_modules/laxate/benchmarks/: bench_synthetic.html
_modules/laxate/hetzner/: cli.html  runner.html  server.html
_sources/: README.md.txt  index.md.txt
_sources/autoapi/laxate/: index.rst.txt
_sources/autoapi/test_all/: index.rst.txt
_sources/autoapi/test_config/: index.rst.txt
_sources/autoapi/test_docker/: index.rst.txt
_sources/autoapi/test_hetzner/: index.rst.txt
_sources/autoapi/test_local/: index.rst.txt
_sources/autoapi/test_remote/: index.rst.txt
_sources/docs/src/: usage.md.txt
autoapi/laxate/: index.html
autoapi/laxate/cli/: index.html
autoapi/test_all/: index.html
autoapi/test_config/: index.html
autoapi/test_docker/: index.html
autoapi/test_hetzner/: index.html
autoapi/test_local/: index.html
autoapi/test_remote/: index.html
docs/src/: API.html  usage.html
graphs/summary/: bench_synthetic.ComputeSuite.time_list_comprehension.json  bench_synthetic.ComputeSuite.time_math_operations.json  bench_synthetic.ComputeSuite.time_string_formatting.json  bench_synthetic.ConfigParseSuite.time_dict_merge.json  bench_synthetic.ConfigParseSuite.time_json_parse.json  bench_synthetic.ConfigParseSuite.time_json_roundtrip.json
laxate/: __init__.py  asv-machine.json  asv.conf.json  asv.publish.conf.json  cli.py  config.py  docker.py  local.py  remote.py  runner.py
laxate/benchmarks/: __init__.py  bench_synthetic.py
laxate/hetzner/: __init__.py  cli.py  runner.py  server.py
laxate/results/: benchmarks.json
laxate/tests/: test_all.py  test_config.py  test_docker.py  test_hetzner.py  test_local.py  test_remote.py
(+37 files in other folders)
